--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -79,7 +79,8 @@ p {
     border-radius: 10px;
     
     padding: 2px;
-    width: 80%;
+    width: 100%;
+    height: 100%;
 }
 
 #feature1_A {
@@ -88,9 +89,15 @@ p {
     border-radius: 10px;
     
     padding: 10px;
+    
+    width: 100%;
+    height: 100%;
 }
 
-#grid {
-    gap: 15px;
+.container {
+    margin: 5%;
     display: grid;
+    gap: 15px;
+    grid-template-columns: auto auto auto;
+
 }
